# personal-intel-agent

./: .env.example  .gitignore  Cargo.toml  Dockerfile.backend  README.md
bridge/: Dockerfile  index.js  package.json
docs/: render-setup.md
src/: ai.rs  brief.rs  collectors.rs  config.rs  main.rs  models.rs  routes.rs  scheduler.rs  whatsapp.rs
